
[TestPreferObjectParams/invalid-0 - 1]
Diagnostic 1: preferObjectParams (2:13 - 2:22)
Message: function `createUser` has 3 positional parameters. Use one object parameter instead.
   1 | 
   2 |             function createUser(name: string, email: string, role: string) {
     |                      ~~~~~~~~~~
   3 |                 return { name, email, role }
---

[TestPreferObjectParams/invalid-1 - 1]
Diagnostic 1: preferObjectParams (2:13 - 2:22)
Message: function `createUser` has 4 positional parameters. Use one object parameter instead.
   1 | 
   2 |             function createUser(name: string, email: string, role: string, active: boolean) {
     |                      ~~~~~~~~~~
   3 |                 return { name, email, role, active }
---

[TestPreferObjectParams/invalid-2 - 1]
Diagnostic 1: preferObjectParams (2:10 - 2:19)
Message: function `createUser` has 3 positional parameters. Use one object parameter instead.
   1 | 
   2 |             const createUser = (name: string, email: string, role: string) => {
     |                   ~~~~~~~~~~
   3 |                 return { name, email, role }
---

[TestPreferObjectParams/invalid-3 - 1]
Diagnostic 1: preferObjectParams (2:10 - 2:19)
Message: function `createUser` has 3 positional parameters. Use one object parameter instead.
   1 | 
   2 |             const createUser = function (name: string, email: string, role: string) {
     |                   ~~~~~~~~~~
   3 |                 return { name, email, role }
---

[TestPreferObjectParams/invalid-4 - 1]
Diagnostic 1: preferObjectParams (3:5 - 3:10)
Message: method `update` has 3 positional parameters. Use one object parameter instead.
   2 |             class UserService {
   3 |                 update(name: string, email: string, role: string) {
     |                 ~~~~~~
   4 |                     return { name, email, role }
---

[TestPreferObjectParams/invalid-5 - 1]
Diagnostic 1: preferObjectParams (2:10 - 2:20)
Message: constructor for `UserService` has 3 positional parameters. Use one object parameter instead.
   1 | 
   2 |             class UserService {
     |                   ~~~~~~~~~~~
   3 |                 constructor(name: string, email: string, role: string) {}
---

[TestPreferObjectParams/invalid-6 - 1]
Diagnostic 1: preferObjectParams (3:5 - 3:10)
Message: method `update` has 3 positional parameters. Use one object parameter instead.
   2 |             const handlers = {
   3 |                 update(name: string, email: string, role: string) {
     |                 ~~~~~~
   4 |                     return { name, email, role }
---

[TestPreferObjectParams/invalid-7 - 1]
Diagnostic 1: preferObjectParams (3:5 - 3:10)
Message: function `update` has 3 positional parameters. Use one object parameter instead.
   2 |             const handlers = {
   3 |                 update: (name: string, email: string, role: string) => {
     |                 ~~~~~~
   4 |                     return { name, email, role }
---

[TestPreferObjectParams/invalid-8 - 1]
Diagnostic 1: preferObjectParams (5:5 - 5:28)
Message: This method has 3 positional parameters. Use one object parameter instead.
   4 |             class Http2Session {
   5 |                 [captureRejectionSymbol](err: Error, event: string, args: unknown[]) {
     |                 ~~~~~~~~~~~~~~~~~~~~~~~~
   6 |                     return { err, event, args }
---

[TestPreferObjectParams/invalid-9 - 1]
Diagnostic 1: preferObjectParams (5:5 - 5:9)
Message: This function has 3 positional parameters. Use one object parameter instead.
   4 |             const handlers = {
   5 |                 [key]: (name: string, email: string, role: string) => {
     |                 ~~~~~
   6 |                     return { name, email, role }
---
